[gd_scene load_steps=3 format=3 uid="uid://crms10t8owold"]

[ext_resource type="Script" uid="uid://ctmpka1t8gdma" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://cjs26tdere16x" path="res://Scenes/main_menu.tscn" id="2_0xm2m"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="UiManager" type="CanvasLayer" parent="."]

[node name="MainMenu" parent="UiManager" instance=ExtResource("2_0xm2m")]

[connection signal="play_btn_clicked" from="UiManager/MainMenu" to="." method="_on_main_menu_play_btn_clicked"]
